k8s/youtube-dl/ratelimit.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ratelimit
  namespace: apps
spec:
  rateLimit:
    average: 10
    burst: 20
