k8s/youtube-dl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: youtube-dl
  namespace: apps
  labels:
    app: youtube-dl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: youtube-dl
  template:
    metadata:
      labels:
        app: youtube-dl
    spec:
      containers:
        # --- CONTENEUR 1 : VPN (Moteur réseau) ---
        - name: vpn
          image: qmcgaw/gluetun:latest
          imagePullPolicy: Always
          securityContext:
            capabilities:
              add: ["NET_ADMIN"]
        - name: youtube-dl
          image: DOCKER_IMAGE_PLACEHOLDER
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: cookies-volume
              mountPath: /etc/youtube-dl/
              readOnly: true
            # INDISPENSABLE pour yt-dlp et ffmpeg avec readOnlyRootFilesystem
            - name: tmp-volume
              mountPath: /tmp
          startupProbe:
            httpGet:
              path: /health
              port: 8080
            failureThreshold: 30 # Autorise 30 échecs
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15 # Augmenté pour laisser le temps au VPN de monter
            periodSeconds: 10
          resources:
            requests:
              memory: "128Mi"
              cpu: "200m"
            limits:
              memory: "512Mi" # Augmenté pour FFmpeg qui consomme lors du muxing
              cpu: "1000m"
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 10001
      
      volumes:
        - name: cookies-volume
          secret:
            secretName: youtube-cookies
        # Volume temporaire en RAM pour yt-dlp/ffmpeg
        - name: tmp-volume
          emptyDir: {}
