k8s/youtube-dl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: youtube-dl
  namespace: apps
spec:
  selector:
    app: youtube-dl
  ports:
    - name: http        # Défini pour correspondre au ServiceMonitor
      protocol: TCP
      port: 80
      targetPort: 8080
